<resources>
    <string name="app_name">Age of ARmies</string>
    <string name="welcome_message">Welcome, king!</string>
    <string name="board_width">Board width:</string>
    <string name="board_height">Board height:</string>
    <string name="board_scale">Board scale:</string>
    <string name="battle_button">Battle!</string>

    <string name="title_activity_game">GameActivity</string>

    <string name="plane_finding">Searching for surfaces&#8230;</string>
    <string name="label_actions">Actions:</string>
    <string name="label_repair">Repair</string>
    <string name="label_farm">Farm</string>
    <string name="label_cannon">Cannon</string>
</resources>
