<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/width_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/width_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/height_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv">

        <TextView
            android:id="@+id/width_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_width"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <SeekBar
            android:id="@+id/width_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/height_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/scale_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/width_layout">

        <TextView
            android:id="@+id/height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_height"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <SeekBar
            android:id="@+id/height_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scale_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/battle_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_layout">

        <TextView
            android:id="@+id/scale_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_scale"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <SeekBar
            android:id="@+id/scale_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/battle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battle_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scale_layout" />


</android.support.constraint.ConstraintLayout>